<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="@color/search"
        android:orientation="vertical">

        <!-- 标题栏 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dashboard_title"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            style="@style/bg_line"
            android:layout_marginStart="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/dashboard_allMoney"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventoryCurrency"
                android:textColor="@color/red"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/myShoppingCartAllMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/dashboard_allplayMoney"
                android:textColor="@color/red"
                android:textSize="21sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboardAllPay"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_500"
                    android:gravity="center"
                    android:text="@string/dashboard_playMoney"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>