<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search"
    android:orientation="vertical">

    <!-- 搜索框 -->
    <LinearLayout
        android:id="@+id/search_top_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <!--返回按钮-->
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/searchBack"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/search_edit_text_background"
            android:hint="@string/home_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="10dp" />

        <!-- 搜索按钮 -->

        <androidx.cardview.widget.CardView
            android:id="@+id/searchButton"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/search_edit_text_background"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_edit_text_background"
                android:gravity="center"
                android:text="@string/search_bottom"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/search_historyResult"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:text="@string/search_historyDelete"/>

    </LinearLayout>


    <!-- RecyclerView 用于显示搜索结果 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchHistoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="16dp" />


</LinearLayout>