<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/search"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/homeTopSearchItme"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_over"
            android:gravity="center"
            android:orientation="vertical"
            android:outlineProvider="background">

            <androidx.cardview.widget.CardView
                android:id="@+id/homeSearchItme"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/lit_grey"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/search_edit_text_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:src="@drawable/baseline_search_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:text="@string/home_search"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeTopItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--横向小部件-->
            <LinearLayout
                style="@style/home_components"
                android:onClick="clickHomeCom1">

                <ImageView
                    style="@style/home_components_img"
                    android:src="@drawable/gavel" />

                <TextView
                    style="@style/home_components_text"
                    android:text="@string/components_1" />

            </LinearLayout>

            <LinearLayout
                style="@style/home_components"
                android:onClick="clickHomeCom2">

                <ImageView
                    style="@style/home_components_img"
                    android:src="@drawable/sales" />

                <TextView
                    style="@style/home_components_text"
                    android:text="@string/components_2" />
            </LinearLayout>

            <LinearLayout
                style="@style/home_components"
                android:onClick="clickHomeCom3">

                <ImageView
                    style="@style/home_components_img"
                    android:src="@drawable/category" />

                <TextView
                    style="@style/home_components_text"
                    android:text="@string/components_3" />
            </LinearLayout>

            <LinearLayout
                style="@style/home_components"
                android:onClick="clickHomeCom4">

                <ImageView
                    style="@style/home_components_img"
                    android:src="@drawable/all_application" />

                <TextView
                    style="@style/home_components_text"
                    android:text="@string/components_4" />
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/search"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/white"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/viewPager"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="fitCenter" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/home_mycsid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/home_recommend"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/homeGoodsIsNull"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text="@string/home_goodsIsNull"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/home_goods_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2" /> <!-- 设置每行显示的项目数为2 -->

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>